--- a/app/views/patients/patient_reg.html.erb
+++ b/app/views/patients/patient_reg.html.erb
@@ -1,32 +1,31 @@
-<%= form_for :patient , :url => {:controller => 'patients', :action => 'patient_submit' , :id => @patient.id } do |f| %>
+<%= form_for :patient , :url => {:controller => 'patients', :action => 'patient_submit' } do |f| %>
 
-
-
+<input type="hidden" value="<%= @patient.id %>" name="patient[id]">
 <div class="control-group">
     <label class="control-label">Lab Code</label>
     <div class="controls">
-        <input type="text" class="input-xlarge" name="patient[lab_code]">
+        <input type="text" class="input-xlarge" name="patient[lab_code]" value="<%= @patient.lab_code %>">
     </div>
 </div>
 
 <div class="control-group">
     <label class="control-label">Last Name</label>
         <div class="controls">
-            <input type="text" class="input-xlarge" name="patient[lname]">
+            <input type="text" class="input-xlarge" name="patient[lname]" value="<%= @patient.lname %>">
         </div>
 </div>
 
 <div class="control-group">
     <label class="control-label">First Name </label>
         <div class="controls">
-            <input type="text" class="input-xlarge" name="patient[fname]">
+            <input type="text" class="input-xlarge" name="patient[fname]" value="<%= @patient.fname %>">
         </div>
 </div>
 
 <div class="control-group">
     <label class="control-label">MI</label>
         <div class="controls">
-            <input type="text" class="input-medium" name="patient[midname]">
+            <input type="text" class="input-medium" name="patient[midname]" value="<%= @patient.midname %>">
         </div>
 </div>
 
@@ -34,8 +33,8 @@
     <label class="control-label">Sex</label>
     <div class="controls">
         <select class="input-large m-wrap" tabindex="1" name="patient[gender]">
-            <option value="male">Male</option>  
-            <option value="female">Female</option>
+            <option value="Male" <%= @patient.gender=='Male' ? 'selected': '' %> >Male</option>  
+            <option value="Female" <%= @patient.gender=='Female' ? 'selected': '' %>>Female</option>
         </select>
     </div>
 </div>
@@ -50,7 +49,7 @@
 
 <div class="control-group">
     <label class="control-label">Date of Birth</label>
-    <%= f.date_select :dob %>
+    <%= f.date_select :dob%>
 </div>
 
 <!-- <div class="control-group">
@@ -68,7 +67,7 @@
         <select class="input-large m-wrap" tabindex="1" name="patient[birth_country]">
             <option value="">Select the Country</option>
              <% @countries.each do |c| %>
-                <option value="<%= c.country_name %>"><%= c.country_name %></option>
+                <option value="<%= c.country_name %>"<%= @patient.birth_country==c.country_name ? 'selected': ''  %>><%= c.country_name %></option>
             <% end %>
         </select>
     </div>
@@ -78,39 +77,33 @@
     <label class="control-label">Present Country</label>
     <div class="controls">
         <select class="input-large m-wrap" tabindex="1" name="patient[present_country]">
-            
+            <option value="0">--Select Country--</option>
             <% @countries.each do |c| %>
-                <option value="<%= c.country_name %>"><%= c.country_name %></option>
+                <option value="<%= c.country_name %>" <%= @patient.present_country==c.country_name ? 'selected': ''  %>><%= c.country_name %></option>
             <% end %>
         </select>
     </div>
 </div>
 
-<!--<div class="control-group">
-    <label class="control-label">TB Status</label>
-    <div class="controls">
-        <label class="checkbox">
-            <div class="checker" id="uniform-undefined">
-                <span id="check_span" class="">
-                    <input type="checkbox" value="1" name="patient[tb_status]" id="tb_status" >
-                </span>
-            </div>
-            TB Positive
-        </label>
+<div class="control-group">
+    <label class="control-label" style="float:left;">TB Status</label>
+    <div class="controls" style="float:left;margin-left:10px;">
+        <input type="checkbox" value="1" <%= @patient.tb_status == true ? 'checked' : '' %> name="patient[tb_status]">
     </div>
-</div> -->
+    <p style="margin-left:10px;">TB Positive</p>
+</div> 
 
 <div class="control-group">
     <label class="control-label">Passport No</label>
     <div class="controls">
-        <input type="text" class="input-xlarge" name="patient[passport]">
+        <input type="text" class="input-xlarge" name="patient[passport]" value="<%= @patient.passport %>">
     </div>
 </div>
 
 <div class="control-group">
     <label class="control-label">Alien No</label>
     <div class="controls">
-        <input type="text" class="input-xlarge"  name="patient[alien_no]">
+        <input type="text" class="input-xlarge"  name="patient[alien_no]" value="<%= @patient.alien_no %>">
     </div>
 </div>
 
@@ -118,9 +111,9 @@
     <label class="control-label">Visa Type</label>
     <div class="controls">
         <select class="input-large m-wrap" tabindex="1"  name="patient[visa_type]">
-            <option value="1">None</option>
-            <option value="k1">K1</option>
-            <option value="v-92">V92</option>
+            <option value="1" <%= @patient.visa_type==1 ? 'selected': '' %>>None</option>
+            <option value="k1" <%= @patient.visa_type=='k1' ? 'selected': '' %>>K1</option>
+            <option value="v-92" <%= @patient.visa_type=='v-92' ? 'selected': '' %>>V92</option>
         </select>
     </div>
 </div>
@@ -131,7 +124,7 @@
         <select class="input-large m-wrap" tabindex="1" name="patient[prior_country]">
             <option value="">Select the Country</option>
             <% @countries.each do |c| %>
-                <option value="<%= c.country_name %>"><%= c.country_name %></option>
+                <option value="<%= c.country_name %>" <%= @patient.prior_country==c.country_name ? 'selected': ''  %> ><%= c.country_name %></option>
             <% end %>
 
 
@@ -146,7 +139,7 @@
         <select class="input-large m-wrap" tabindex="1" name="patient[embassy_country]">
             <option value="">Select the Country</option>
             <% @countries.each do |c| %>
-                <option value="<%= c.country_name %>"><%= c.country_name %></option>
+                <option value="<%= c.country_name %>" <%= @patient.embassy_country==c.country_name ? 'selected': ''  %>><%= c.country_name %></option>
             <% end %>
 
 
@@ -161,7 +154,7 @@
         <select class="input-large m-wrap" tabindex="1" name="patient[embassy_city]">
             <option value="">Select the City</option>
             <% @cities.each do |c| %>
-                <option value="<%= c.city_name %>"><%= c.city_name %></option>
+                <option value="<%= c.city_name %>" <%= @patient.embassy_city==c.city_name ? 'selected': '' %>><%= c.city_name %></option>
             <% end %>
 
 
