VDLR test phase by Furqan Haroon

--- a/app/views/vdlr/index.html.erb
+++ b/app/views/vdlr/index.html.erb
@@ -20,7 +20,7 @@
 		<td><%= a.gender %></td>
 		<td><%= a.dob %></td>
 		<td><%= a.visa_type %></td>
-		<td><a href="/patients/patient_reg?id=<%= a.id %>">Edit Registration</a></td>
+		<td><a href="/patients/patient_reg?id=<%= a.id %>">VDLR Injection</a></td>
 		<td><button>Add Exam</button></td>
 	</tr>
 	<% end %>
