--- a/app/views/vdlr/vdlr_result.html.erb
+++ b/app/views/vdlr/vdlr_result.html.erb
@@ -1,14 +1,35 @@
 <div style="border: 1px solid black;">
-	<p>First Name: <input type="text" value="<%= @patient.fname %>"></p>
-	<p>Last Name: <input type="text" value="<%= @patient.lname %>"></p>
-	<p>Middle Name: <input type="text" value="<%= @patient.midname %>"></p>
-	<p>Passport: <input type="text" value="<%= @patient.passport %>"></p>
-	<p>Date of birth: <input type="text" value="<%= @patient.dob %>"></p>
-	<p>Visa Type: <input type="text" value="<%= @patient.visa_type %>"></p>
+	<table class="table" >
+	<thead>
+	<tr>
+		<th>Passport No</th>
+		<th>First Name</th>
+		<th>Last Name</th>
+		<th>Gender</th>
+		<th>Date of Birth</th>
+		<th>Visa Type</th>
+		<th colspan="2">Action</th>
+	</tr>
+	
+	</thead>
+	<tbody id="table_body">
+	<% @patients_p.each do | a | %>
+	<tr>
+		<td><%= a.passport %></td>
+		<td><%= a.fname %></td>
+		<td><%= a.lname %></td>
+		<td><%= a.gender %></td>
+		<td><%= a.dob %></td>
+		<td><%= a.visa_type %></td>
+		<td><a href="/vdlr/vdlr_record?id=<%= a.id %>&test_id=<%= a.exam_id %>">VDLR Result</a></td>
+		<td><button>Add Exam</button></td>
+	</tr>
+	<% end %>
+	</tbody>
+</table>
 </div>
-
 <h2>VDLR Result Form</h2>
-<%= form_for(:vdlr, :url => {:controller => 'vdlr', :action => 'create'}) do |f| %>
+<%= form_for(:vdlr_result, :url => {:controller => 'vdlr', :action => 'send_result'}) do |f| %>
 	<%= f.hidden_field :patients_id,:value=>params[:id] %>
 	<%= f.hidden_field :exam_patients_id,:value=>params[:test_id] %>
 	<p> Result Date:</br> <%= f.date_select :date_applied %> </p>
