--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -87,7 +87,7 @@
 		dataType:"html",
 		data:{"passport_no":passport_no},
 		success: function(data){
-		if(data.length>0)
+		if(data.length>=0)
 		{
 			$(".appoinment_data").hide();
 			$('#table_body').html(data);
@@ -105,7 +105,7 @@
 		dataType:"html",
 		data:{"gender":$("#gender_filter").val()},
 		success: function(data){
-		if(data.length>0)
+		if(data.length>=0)
 		{
 			$(".appoinment_data").hide();
 			$('#table_body').html(data);
