--- a/app/views/lot/index.html.erb
+++ b/app/views/lot/index.html.erb
@@ -9,7 +9,8 @@
 		<th>Manufacturing Date</th>
 		<th>Expiry Date</th>
 	</tr>
-	<% @lot.each do |h| @i=1%>
+	<% @i=1 %>
+	<% @lot.each do |h| %>
 	<tr>
 		<td><%= @i %></td>
 		<td><%= h.country_name %></td>
