--- a/app/views/physician/view_forms.html.erb
+++ b/app/views/physician/view_forms.html.erb
@@ -1,5 +1,5 @@
 <% @id = params[:id] %>
 <a href="/physician/edit?id=<%= @id %>">Medical History</a><br>
-<a href="">Medicine Reffer</a><br>
+<a href="/physician/add_ref?id=<%= @id %>" >Medicine Reffer</a><br>
 <a href="">Personal Information</a><br>
 <a href="">Physical Examination</a>
